--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
-    <div id="camera-app">
-    <div class="header">
-      <div class="camera-icon"></div>
-      <div class="flash-icon"></div>
+    <div id="camera-container"> <!-- 중간 카메라 라인 -->
+      <!-- p5.js canvas will be inserted here -->
+      <button id="autoBtn">Auto</button>
     </div>
-    <div class="camera-container">
-      <!-- 여기에 캔버스가 독립적으로 생성됩니다 -->
+    
+    <div id="bottom-container"> <!-- 밑 버튼 라인 -->
+      <button id="captureBtn">Capture</button>
     </div>
-    <div class="footer">
-      <div class="gallery-icon"></div>
-      <div class="switch-camera-icon"></div>
-    </div>
-  </div>
+    
     <script src="sketch.js"></script>
   </body>
 </html>
