--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
-    <div id="camera-container"> <!-- 중간 카메라 라인 -->
-      <!-- p5.js canvas will be inserted here -->
-      <button id="autoBtn">Auto</button>
-    </div>
-    
-    <div id="bottom-container"> <!-- 밑 버튼 라인 -->
-      <button id="captureBtn">Capture</button>
-    </div>
-    
+    <main>
+    </main>
     <script src="sketch.js"></script>
   </body>
 </html>
